--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-<meta charset="UTF-8">
-<title>Заметки</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-</head>
-
-<body>
 <header>
-<h1 class="text-center">Заметки</h1>
+<h1 class="text-center m-4">Заметки</h1>
 </header>
 
 <div class="container">
@@ -21,17 +10,10 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
                 <div class="card-body">
                     <h5 class="card-title">{{title}}</h5>
                     <p class="card-text">{{text}}</p>
-                    <a href="/info/{{id}}" class="btn btn-primary">Подробнее</a>
+                    <a href="/info/{{id}}" class="btn btn-info">Подробнее</a>
                 </div>
             </div>
         </div>
         {{/each}}
     </div>
 </div>
-
-<footer>
-<p class="text-center">&COPY; Chuhlomin</p>
-</footer>
-</body>
-
-</html>
