add dark  theme

--- a/views/edit-info.hbs
+++ b/views/edit-info.hbs
@@ -1,26 +1,32 @@
 <header>
-<h1 class="text-center m-4"></h1>
+    <h1 class="text-center m-4"></h1>
 </header>
 
 <div class="container">
-<div class="row">
-<form action="/admin/edit" method="POST">
-<input name="id" hidden value="{{id}}">
+    <div class="row">
+        <form action="/admin/edit" method="POST">
+            <input name="id" hidden value="{{id}}">
 
-<div>
-<label for="title">Название</label>
-<input id="title" name="title" value="{{title}}">
-</div>
+            <div>
+                <label for="title">Название</label>
+                <input id="title" name="title" value="{{title}}">
+            </div>
 
-<div>
-<label for="text">Описание</label>
-<textarea id="text" name="text">{{text}}</textarea>
-</div>
+            <div>
+                <label for="text">Описание</label>
+                <textarea id="text" name="text">{{text}}</textarea>
+            </div>
 
-<div>
-<button type="reset">Очистить</button>
-<button>Сохранить</button>
-</div>
-</form>
-</div>
+            <div>
+                <label for="image">Картинка</label>
+                <textarea id="image" name="image" placeholder="вставьте URL картинки">{{image}}</textarea>
+            </div>
+
+
+            <div>
+                <button type="reset">Очистить</button>
+                <button>Сохранить</button>
+            </div>
+        </form>
+    </div>
 </div>
