--- a/views/info.hbs
+++ b/views/info.hbs
@@ -1,9 +1,12 @@
 <header>
-<h1 class="text-center m-4">{{title}}</h1>
+    <h1 class="text-center m-4">{{title}}</h1>
 </header>
 
 <div class="container">
-<div class="row">
-<p>{{text}}</p>
-</div>
+    <div class="row">
+        <p>{{text}}</p>
+        <img src="{{image}}" class="img-thumbnail img-fluid" alt="...">
+    </div>
+    
+
 </div>
