--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 <header>
-<h1 class="text-center m-4">Заметки</h1>
+    <h1 class="text-center m-4">Заметки</h1>
 </header>
 
 <div class="container">
@@ -8,9 +8,16 @@
         <div class="col-sm-6 p-2">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">{{title}}</h5>
-                    <p class="card-text">{{text}}</p>
-                    <a href="/info/{{id}}" class="btn btn-info">Подробнее</a>
+                    <div class="d-flex bd-highlight">
+                        <div class="p-2 flex-fill bd-highlight">
+                            <h5 class="card-title">{{title}}</h5>
+                            <p class="card-text">{{text}}</p>
+                            <a href="/info/{{id}}" class="btn btn-info">Подробнее</a>
+                        </div>
+                        <div class="p-2 flex-fill bd-highlight">
+                            <img src="{{image}}" class="img-thumbnail float-end img_min" alt="...">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
