--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,18 +2,29 @@
 <html>
 
 <head>
-<meta charset="UTF-8">
-<title>Заметки</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <title>Заметки</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
-{{{body}}}
+    <div class="switcher">
+        <input type="checkbox" class="checkbox" id="chk" />
+        <label class="label" for="chk">
+            <i class="fas fa-moon"></i>
+            <i class="fas fa-sun"></i>
+            <div class="ball"></div>
+        </label>
+    </div>
 
-<footer>
-<p class="text-center text-secondary">&COPY; Chuhlomin</p>
-</footer>
+    {{{body}}}
+
+    <footer>
+        <p class="text-center">&COPY; Chuhlomin</p>
+    </footer>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
