adding and leveling cards

--- a/views/info.hbs
+++ b/views/info.hbs
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
         <p>{{text}}</p>
-        <img src="{{image}}" class="img-thumbnail img-fluid" alt="...">
+        <img src="{{image}}" class="img-thumbnail img_full" alt="...">
     </div>
     
 
