--- a/views/css/main.css
+++ b/views/css/main.css
@@ -24,7 +24,7 @@ body.dark .card{
 }
 
 .label {
-	background-color: #111;
+	background-color: #204de2;
 	border-radius: 50px;
 	cursor: pointer;
 	display: flex;
@@ -85,5 +85,22 @@ img.img_min{
 }
 
 .img_full{
-    
+	min-width: 40%;
+	max-height: 400px;
+	margin: 0 auto;
+	display: block;
+	
+}
+.img-thumbnail{
+	padding: 0px;
+	border: 0px;
+}
+
+.card{
+	min-height: 316px;
+}
+
+a.btn{
+	position: absolute;
+	bottom: 25px;
 }
